# database-api

./: .coveralls.yml  .dockerignore  .gitignore  Dockerfile  Dockerfile.api  README.md  alembic.ini  celerybeat-schedule.bak  celerybeat-schedule.dir  config.py  docker-compose.yml  main.py  makefile  pyproject.toml  pytest.ini  settings.py
.github/workflows/: prod.yml  staging.yaml  testing.yaml
alembic/: env.py
alembic/versions/: 37ec41722d1b_.py  703c44143fec_add_project_id.py  718da4a88cdd_.py  ee15b2e5ac61_.py
app/: database.py  models.py  routes.py  schema.py
app/core/: config.py  database.py  database_flavor.py  database_service.py
app/helpers/: admin.py  auth.py  cron.py  database_flavor.py  database_service.py  database_session.py  decorators.py  email.py  logger.py
app/routes/: __init__.py  admin.py  logging.py  routes.py  userdb.py
app/tasks/: __init__.py
app/templates/: database_limit.html
docker/: Dockerfile
docker/prod/: Dockerfile
helm/: values.prod.yaml  values.staging.yaml
scripts/: start-prod.sh  start.sh  update_users.py
tests/: conftest.py  test_auth.py  test_database_flavor.py  test_database_service.py  test_endpoints.py  test_logger.py
